# NoteStream

./: .env.example  PRD.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
src/notestream/: __init__.py  __main__.py  api.py  cli.py  db.py  mindmap_renderer.py  models.py  pdf_renderer.py  prompts.py  services.py
