[project]
name = "notestream"
version = "0.1.0"
description = "Generate summaries, notes, quizzes, and PDFs from YouTube tutorials"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "loguru>=0.7.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "reportlab>=4.2.0",
  "rich>=13.9.0",
  "typer>=0.12.5",
  "uvicorn[standard]>=0.30.0",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2025.1.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[project.scripts]
notestream = "notestream.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notestream"]

[tool.ruff]
line-length = 100
target-version = "py311"
